--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Dev Project</title>
     </head>
-    <body>
+    <body style="background-color: #ECF9FF">
         <table cellspacing="20">
             <tr>
                 <td><img src="E:\Subash\Documents\Others\subash.jpg" alt=""></td>
