--- a/index - Copy.html
+++ b/index - Copy.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img class="circular" src="E:\Subash\Documents\Others\subash.jpg" alt=""></td>
+                <td><img src="E:\Subash\Documents\Others\subash.jpg" alt=""></td>
                 <td>
                     <h1> Subash Chandra Bose</h1><p><em> IT Professional - <strong>Data Engineer</strong></em></p>
                     <ul>
@@ -28,10 +28,10 @@
                 </td>
             </tr>
         </table>
-        <hr class="horizontalrule">
+        <hr>
         <a href="E:\Subash\Algotrading\dev\Web_Development_Dev\tech_skills.html" target="_blank"><h3>Technical Skills</h3></a>
-        <hr class="horizontalrule">
+        <hr>
         <a href="E:\Subash\Workspace\Resume\Subash_Resume.pdf" target="_blank"><h3>My Resume for reference</h3></a>
-        <hr class="horizontalrule">
+        <hr>
     </body>
 </html>
