--- a/tech_skills.html
+++ b/tech_skills.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Technical Skills</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <h3>Technical Skills</h3>
